// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CruiseDetail should render correctly 1`] = `
<div
  className="cruise-detail"
>
  <Row
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
        "xxl",
      ]
    }
  >
    <Col
      className="cruise-detail__name text-primary"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
          "xxl",
        ]
      }
    >
      Princess Cruises
      : 
      Discovery Princess
    </Col>
  </Row>
  <Row
    className="my-2"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
        "xxl",
      ]
    }
  >
    <Col
      md={4}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
          "xxl",
        ]
      }
      xs={12}
    >
      <p
        className="cruise-detail__label"
      >
        Depart
      </p>
      <p
        className="m-0"
      >
        Seattle
        , 
        Washington
         at
         
        4:00 PM
      </p>
    </Col>
    <Col
      md={2}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
          "xxl",
        ]
      }
      xs={12}
    >
      <p
        className="cruise-detail__label"
      >
        Duration
      </p>
      <p
        className="m-0"
      >
        7
         day
        s
         (roundtrip)
      </p>
    </Col>
    <Col
      md={6}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
          "xxl",
        ]
      }
      xs={12}
    >
      <p
        className="cruise-detail__label"
      >
        Notes
      </p>
      <p
        className="cruise-detail__notes m-0"
      >
        Cabin #
        11234
         
        (Suite)
      </p>
    </Col>
  </Row>
</div>
`;

exports[`CruiseDetail should render with end and without roundtrip correctly 1`] = `
<div
  className="cruise-detail"
>
  <Row
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
        "xxl",
      ]
    }
  >
    <Col
      className="cruise-detail__name text-primary"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
          "xxl",
        ]
      }
    >
      Royal Caribbean
      : 
      Discovery Princess
    </Col>
  </Row>
  <Row
    className="my-2"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
        "xxl",
      ]
    }
  >
    <Col
      md={4}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
          "xxl",
        ]
      }
      xs={12}
    >
      <p
        className="cruise-detail__label"
      >
        Arrive
      </p>
      <p
        className="m-0"
      >
        Athens
        , 
        Greece
         at
         
        12:00 AM
      </p>
    </Col>
    <Col
      md={2}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
          "xxl",
        ]
      }
      xs={12}
    >
      <p
        className="cruise-detail__label"
      >
        Duration
      </p>
      <p
        className="m-0"
      >
        1
         day
      </p>
    </Col>
  </Row>
</div>
`;

exports[`CruiseDetail should render with end correctly 1`] = `
<div
  className="cruise-detail"
>
  <Row
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
        "xxl",
      ]
    }
  >
    <Col
      className="cruise-detail__name text-primary"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
          "xxl",
        ]
      }
    >
      Princess Cruises
      : 
      Discovery Princess
    </Col>
  </Row>
  <Row
    className="my-2"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
        "xxl",
      ]
    }
  >
    <Col
      md={4}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
          "xxl",
        ]
      }
      xs={12}
    >
      <p
        className="cruise-detail__label"
      >
        Arrive
      </p>
      <p
        className="m-0"
      >
        Seattle
        , 
        Washington
         at
         
        7:00 AM
      </p>
    </Col>
    <Col
      md={2}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
          "xxl",
        ]
      }
      xs={12}
    >
      <p
        className="cruise-detail__label"
      >
        Duration
      </p>
      <p
        className="m-0"
      >
        7
         day
        s
         (roundtrip)
      </p>
    </Col>
  </Row>
</div>
`;

exports[`CruiseDetail should render with roundtrip correctly 1`] = `
<div
  className="cruise-detail"
>
  <Row
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
        "xxl",
      ]
    }
  >
    <Col
      className="cruise-detail__name text-primary"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
          "xxl",
        ]
      }
    >
      Royal Caribbean
      : 
      Discovery Princess
    </Col>
  </Row>
  <Row
    className="my-2"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
        "xxl",
      ]
    }
  >
    <Col
      md={4}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
          "xxl",
        ]
      }
      xs={12}
    >
      <p
        className="cruise-detail__label"
      >
        Depart
      </p>
      <p
        className="m-0"
      >
        Sicily
        , 
        Italy
         at
         
        12:00 AM
      </p>
    </Col>
    <Col
      md={2}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
          "xxl",
        ]
      }
      xs={12}
    >
      <p
        className="cruise-detail__label"
      >
        Duration
      </p>
      <p
        className="m-0"
      >
        1
         day
      </p>
    </Col>
    <Col
      md={6}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
          "xxl",
        ]
      }
      xs={12}
    >
      <p
        className="cruise-detail__label"
      >
        Notes
      </p>
      <p
        className="cruise-detail__notes m-0"
      >
        Cabin #
        9112
         
      </p>
    </Col>
  </Row>
</div>
`;
